e2e/agic/edgecases/overlappinghealthprobes/output/healthcheckpolicy-default-contoso-service-policy.yaml
apiVersion: alb.networking.azure.io/v1
kind: HealthCheckPolicy
metadata:
  name: contoso-service-policy
  namespace: default
spec:
  default:
    http:
      host: contoso-1.com
      match:
        statusCodes:
        - start: 200
          end: 299
        - start: 301
          end: 301
      path: /health-path-1
    interval: 1m40s
    port: 3001
    timeout: 1m40s
    unhealthyThreshold: 1
  targetRef:
    group: ""
    kind: Service
    name: contoso-service
    namespace: default
