e2e/agic/edgecases/overlappinghealthprobes/output/httproute-default-health-probe-ingress-2-health-probe.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: health-probe-ingress-2-health-probe
  namespace: default
spec:
  hostnames:
  - health-probe
  parentRefs:
  - name: alb-gateway
    sectionName: http
  rules:
  - backendRefs:
    - name: contoso-service
      port: 80
    matches:
    - path:
        type: Exact
        value: /path-2/
